--- a/Form/index.html
+++ b/Form/index.html
@@ -8,7 +8,7 @@
     <title>Form Validator</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
         <form action="" id="form" class="form">
             <h2>Register with us</h2>
             <div class="form-control">
@@ -28,6 +28,8 @@
             </div>
             <button>Save</button>
         </form>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
